--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/rasgele/kcatpub/issues"
   },
-  "homepage": "https://github.com/rasgele/kcatpub#readme"
+  "homepage": "https://github.com/rasgele/kcatpub#readme",
+  "dependencies": {
+    "commander": "^12.0.0",
+    "kafkajs": "^2.2.4"
+  }
 }
