--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
   "dependencies": {
     "commander": "^12.0.0",
     "kafkajs": "^2.2.4"
+  },
+  "devDependencies": {
+    "@semantic-release/git": "^10.0.1",
+    "semantic-release": "^23.0.2"
   }
 }
