--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "kafkajs": "^2.2.4"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "semantic-release": "^23.0.2"
   }
